--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Home - Eduardo Salinas</title>
+
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
