--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Home - Eduardo Salinas</title>
+	<title>Home - Eduardo Salinas Moron</title>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
